--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap');
 
-
+/* LANDING PAGE */
 .signature{
     position: fixed;
     margin: 55px 15px 15px 15px;
     font-family: Abril Fatface, cursive; 
 }
 
+/* navbar */
 .nav-li{
     font-size: 23px;
     font-weight: 600;
-    border: 1px solid#A26092;
+    border: 1px solid #773065;
     background-color: #A26092;
     margin: 20px 20px 20px 20px;
     padding: 10px 20px;
@@ -31,7 +32,7 @@
 
 .nav-back{
     margin-top: 40px;
-    background-color: #FCF1FF;
+    background-color: #faebff;
     width: min-content;
 }
 
@@ -40,6 +41,7 @@
     justify-content: center;
     padding: 5px 5px 5px 5px;
 }
+
 
 .front {
     position: absolute;
@@ -97,7 +99,7 @@
     top: 30%;
 }
 
-
+/* ABOUT */
 .about {
     position: absolute;
     top: 130%;
@@ -138,17 +140,267 @@
     transition: transform 0.2s cubic-bezier(1, -0.05, 0, 1.1);
 }
 
-
 .card:hover {
     transform: translateY(-30px); /* Pop-up effect on hover */
 }
 
+ 
+/* PROJECTS */
 
-.project {
+.projects {
     position: absolute;
-    top: 200vh;
+    top: 270%;
+    bottom: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+     /* height: 100vh;  */
+    display: grid;
+    place-items: center;
+    color: #1e293b;
+    font-family: "Euclid Circular A", "Poppins";
+  }
+
+  .project-heading {
+    margin-left: 90%;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    font-size:120px;
+      letter-spacing:0.05em;
+    -webkit-text-fill-color: transparent;
+   
+    -webkit-text-stroke-color: white;
+    text-shadow: -5px -3px 0px #a26092, 5px -14px 4px #000000;;
+}
+  
+.pcards-container  h2,
+  h3,
+  h4 {
+    margin: 0;
+    font-weight: 700;
+  }
+  
+  .pcards {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 50px;
+    margin-left: 60px;
+  }
+  
+  article {
+    position: relative;
+    perspective: 1000px;
+    width: 300px;
+    height: 300px;
+  }
+  
+  article header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40px;
+    margin-bottom: 26px;
+  }
+  
+  article header h2 {
+    font-size: 20px;
+  }
+  
+  article .front,
+  article .back {
+    /* position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; */
+    width: 100%; /* Ensure the width adapts to the parent */
+    height: 100%;
+    text-align: center;
+    backface-visibility: hidden;
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+      rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
+    padding: 24px;
+    transition: 0.6s;
+    cursor: pointer;
+  }
+  
+  .back {
+    transform: rotateY(180deg);
+  }
+  
+  input {
+    position: absolute;
+    scale: 0;
+  }
+  
+  input:checked ~ article .back {
+    transform: rotateY(0);
+  }
+  
+  input:checked ~ article .front {
+    transform: rotateY(-180deg);
+  }
+  
+  article var {
+    font-style: normal;
+    font-size: 80px;
+    line-height: 1;
+  }
+  
+  article h3 {
+    margin: 0 0 30px;
+    font-weight: 500;
+  }
+  
+  #summary :is(var, h3) {
+    color: #3b82f6;
+  }
+  
+  #overdue :is(var, h3) {
+    color: #ef4444;
+  }
+  
+  #features :is(var, h3) {
+    color: #22c55e;
+  }
+  
+  article :is(h4, p) {
+    opacity: 0.5;
+    font-size: 20px;
+  }
+  
+  article p {
+    margin-top: 76px;
+  }
+
+  #safar{
+    background-image: url("https://nextvacay.com/wp-content/uploads/2023/07/world-travel-2.jpg");
+    background-size: 100% 100%;
+  }
+  #drumkit{
+    background-image: url("https://kaizenaire.com/wp-content/uploads/2023/09/The-Aesthetic-Appeal-of-Drum-Sets-Singapore-1024x574.png");
+    background-size: 100% 100%;
+  }
+  #capsuleclock{
+    background-image: url("https://media.istockphoto.com/id/1317221129/vector/old-woman-reminded-to-take-medicine-medication-and-reminder-concept-vector-flat-cartoon.jpg?s=612x612&w=0&k=20&c=LF6e_G4Ag3TLJVu9tgC4uJbLvIiJgcHAFKqZ05PyOY4=");
+    background-size: 100% 100%;
+  }
+  #simongame{
+    background-image: url("https://global.discourse-cdn.com/business7/uploads/replitteams/original/3X/d/e/de9b3ef06b1be7a183056e559529989f7a35649e.png");
+    background-size: 100% 100%;
+  }
+
+
+  /* footer */
+
+  .contact-heading {
+    margin-top: 150px;
+    margin-left: 90%;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    font-size:120px;
+      letter-spacing:0.05em;
+    -webkit-text-fill-color: transparent;
+   
+    -webkit-text-stroke-color: white;
+    text-shadow: -5px -3px 0px #a26092, 5px -14px 4px #000000;;
 }
 
+  footer {
+    margin: 0;
+    /* background: linear-gradient(#fcf1ff, #ac93a3); */
+    font-family: "Euclid Circular A", "Poppins";
+    color: rgb(255, 255, 255);
 
- 
+    position: absolute;
+    left: 0;
+   top:450%;
+    
+    /* bottom: 0; */
+    display: flex;
+    width: 61.5%;
+    height: 400px;
+  }
+  
+  /* html,
+  body {
+    height: 100%;
+  } */
+  
+  .background {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  
+  .socials, .links {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .socials {
+    gap: 20px;
+  }
+  
+  .socials a {
+    font-size: 24px;
+  }
+  
+  .links {
+    gap: 10px;
+  }
+  
+  .legal {
+    font-size: 12px;
+    margin: 0;
+  }
+  
+  svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scaleY(3) scaleX(2.25);
+    transform-origin: bottom;
+    box-sizing: border-box;
+    display: block;
+    pointer-events: none;
+  }
+  
+
+  
+  section {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 30px;
+    padding-bottom: 50px;
+    padding-left: 60px;
+    width: 100%;
+    font-weight: 500;
+  }
+  
+  @media (width > 20px) {
+    section {
+      align-items: center;
+      padding-left: 90%;
+      gap: 20px;
+    }
+  
+    .links {
+      gap: 20px;
+    }
+  }
+
+
 
